changes made to home page,added an image to the image folder and fixed horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1003,9 +1003,11 @@ body{
 html {
     position: relative;
     min-height: 100%;
+          overflow-x: hidden;
 }
 body {
     margin: 0px 0px 100px; /* bottom = footer height */
+          overflow-x: hidden;
 }
 
 /* Adding styling for Map*/
